...
                horizontalArrangement = Arrangement.Start) {
                TextButton(
                    onClick = {
                        onClicked(MainDestinations.USERPROFILE_ROUTE)
                    }){
                    Text(
                        "Update User Profile",
                        color = if(  isSystemInDarkTheme())  {Color.White } else { Color.Black },
                        style = TextStyle(textDecoration = TextDecoration.Underline)
                    )
                }
            }
            Divider(
...
